--- a/sass/sass/mixins/_extend.scss
+++ b/sass/sass/mixins/_extend.scss
@@ -37,13 +37,28 @@
     border-color: transparent #555 transparent transparent;
 }
 
+// 清除浮動
+%clearfix {
+    clear: both;
+    zoom: 1;
+    &:before,
+    &:after {
+        content: "";
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
+}
+
 // 啟動display:flex
-%flex_setting{
-    -webkit-box-sizing: border-box;
+%flex_set{
+    // -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    // display: -webkit-box;
+    // display: -ms-flexbox;
     display: flex;
+    flex-flow: row wrap;  
     
     // 預設均分
     justify-content: space-between;
