--- a/sass/sass/mixins/_text-overflow.scss
+++ b/sass/sass/mixins/_text-overflow.scss
@@ -1,9 +1,26 @@
 //https://codepen.io/iMarkup/pen/LEjMZN
-@mixin text-overflow($overflow: ellipsis) {
+
+// @mixin text-overflow($overflow: ellipsis) {
+//     overflow: hidden;
+//     white-space: nowrap;
+//     text-overflow: $overflow; // values are: clip, ellipsis, or a string
+// }
+
+@mixin text-overflow {
     overflow: hidden;
     white-space: nowrap;
-    text-overflow: $overflow; // values are: clip, ellipsis, or a string
+    text-overflow: ellipsis;
 }
+
+@mixin text-line($value) {
+	overflow: hidden;
+	text-overflow: -o-ellipsis-lastline;
+	text-overflow: ellipsis;   // ellipsis＝省略
+	display: -webkit-box;
+	-webkit-line-clamp: $value;
+	-webkit-box-orient: vertical;
+}
+
 //範例：
 // p {
 //   background-color: $gray;
