--- a/sass/sass/mixins/_image.scss
+++ b/sass/sass/mixins/_image.scss
@@ -1,9 +1,3 @@
-// https://github.com/twbs/bootstrap-sass/blob/master/assets/stylesheets/bootstrap/mixins/_image.scss
-@mixin img-responsive($display: block) {
-  display: $display;
-  max-width: 100%; // Part 1: Set a maximum relative to the parent
-  height: auto; // Part 2: Scale the height according to the width, otherwise you get stretching
-}
 //https://css-tricks.com/snippets/sass/maintain-aspect-ratio-mixin/
 @mixin aspect-ratio($width, $height) {
     overflow: hidden;
@@ -25,10 +19,6 @@
     }
 }
 // 圖片列表mixin
-// @mixin make_img_outer() {
-//     text-align: left;
-//     overflow: hidden;
-// }
 // @mixin make_col($pic_length,$m_pic_length) {
 //     $outer_W: 100%;
 //     $pic_col: $pic_length;
@@ -41,7 +31,7 @@
 //     float: left;
 //     width: $pic_W;
 //     overflow: hidden;
-//     @include box-sizing(border-box);
+//     box-sizing: border-box;
 //     @include screen('mobile') {
 //         float:none;
 //         display: inline-block;
