2020-1023 1、將 flex 算式改為 for 迴圈。2、整理引用了 _border-radius、_box-shadow、_box-sizing、_fatfooter 的css，_transition 尚在測試是否可保留。

--- a/sass/page/_cp.scss
+++ b/sass/page/_cp.scss
@@ -4,6 +4,7 @@ h1.title, h2.title {
   line-height: 1.25em;
   margin: .4em 0;
 }
+// .tt{ color: #222; }
 .cp {
   .pic {
     float: left;
@@ -266,7 +267,7 @@ h1.title, h2.title {
   display: flex;
   flex-wrap:wrap;
   @extend %clearfix;
-  @include box-sizing;
+  box-sizing: border-box;
 
   li {
     flex:1 1 calc(100% / 3);
