--- a/sass/sass/mixins/_flex-set.scss
+++ b/sass/sass/mixins/_flex-set.scss
@@ -1,5 +1,6 @@
-// 父層啟動flex： @extend %flex_setting;
+// 父層啟動flex： @extend %flex_set;
 
+// @for $i from 1 through 12 {}
 
 // 子層 - 平均欄寬
 @mixin flex-col-equal($col, $m-gutter, $p-gutter) {
@@ -10,120 +11,82 @@
   padding: 0 calc(#{$p-gutter}/2);
 
   @if $col == 1 {
-    &:last-child{
-      &:nth-child(3n-1), &:nth-child(3n-2),
-      &:nth-child(4n-1), &:nth-child(4n-2){ margin-right: 0; }
-    }
+    &:last-child{ margin-right: 0 !important; }
   } @else if $col == 2 {
-    &:last-child{                     
+    &:last-child{
       &:nth-child(2n),
       &:nth-child(3n-1),
       &:nth-child(4n-3){ margin-right: 0; }
     }
   } @else if $col == 3 {
-    &:last-child{
-      &:nth-child(3n-3){ margin-right: 0; }
-      &:nth-child(3n-2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(3n-1){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
+    @for $i from 1 through 2 {
+      &:last-child{
+        &:nth-child(3n-3){ margin-right: 0 !important; }
+        &:nth-child(3n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   } @else if $col == 4 {
-    &:last-child{
-      &:nth-child(4n-4){ margin-right: 0; }
-      &:nth-child(4n-3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
-      &:nth-child(4n-2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(4n-1){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
-
-      // &:nth-child(4n-3){ margin-right: calc( (100% / #{$col})*3 ); }
-      // &:nth-child(4n-2){ margin-right: calc( (100% / #{$col})*2 ); }
-      // &:nth-child(4n-1){ margin-right: calc( (100% / #{$col})*1 ); }
+    @for $i from 1 through 3 {
+      &:last-child{
+        &:nth-child(4n), &:nth-child(4n-4){ margin-right: 0 !important; }
+        &:nth-child(4n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   } @else if $col == 5 {
-    &:last-child{
-      &:nth-child(5n-5){ margin-right: 0; }
-      &:nth-child(5n-4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
-      &:nth-child(5n-3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
-      &:nth-child(5n-2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(5n-1){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
+    @for $i from 1 through 4 {
+      &:last-child{
+        &:nth-child(5n-5){ margin-right: 0; }
+        &:nth-child(5n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   } @else if $col == 6 {
-    &:last-child{
-      &:nth-child(6n-6){ margin-right: 0; }
-      &:nth-child(6n-5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
-      &:nth-child(6n-4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
-      &:nth-child(6n-3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
-      &:nth-child(6n-2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(6n-1){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
-
+    @for $i from 1 through 5 {
+      &:last-child{
+        &:nth-child(6n-6){ margin-right: 0; }
+        &:nth-child(6n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   } @else if $col == 7 {
-    &:last-child{
-      &:nth-child(7n-7){ margin-right: 0; }
-      &:nth-child(7n-6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
-      &:nth-child(7n-5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
-      &:nth-child(7n-4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
-      &:nth-child(7n-3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
-      &:nth-child(7n-2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(7n-1){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
+    @for $i from 1 through 6 {
+      &:last-child{
+        &:nth-child(7n-7){ margin-right: 0; }
+        &:nth-child(7n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   } @else if $col == 8 {
-    &:last-child{
-      &:nth-child(8n-8){ margin-right: 0; }
-      &:nth-child(8n-7){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*7 + (#{$m-gutter}*#{$col})*7 / (#{$col} - 1) ); }
-      &:nth-child(8n-6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
-      &:nth-child(8n-5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
-      &:nth-child(8n-4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
-      &:nth-child(8n-3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
-      &:nth-child(8n-2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(8n-1){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
+    @for $i from 1 through 7 {
+      &:last-child{
+        &:nth-child(8n-8){ margin-right: 0; }
+        &:nth-child(8n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   } @else if $col == 9 {
-    &:last-child{
-      &:nth-child(9n-9){ margin-right: 0; }
-      &:nth-child(9n-8){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*8 + (#{$m-gutter}*#{$col})*8 / (#{$col} - 1) ); }
-      &:nth-child(9n-7){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*7 + (#{$m-gutter}*#{$col})*7 / (#{$col} - 1) ); }
-      &:nth-child(9n-6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
-      &:nth-child(9n-5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
-      &:nth-child(9n-4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
-      &:nth-child(9n-3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
-      &:nth-child(9n-2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(9n-1){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
+    @for $i from 1 through 8 {
+      &:last-child{
+        &:nth-child(9n-9){ margin-right: 0; }
+        &:nth-child(9n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   } @else if $col == 10 {
-    &:last-child{
-      // &:nth-child(10n+1){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*9 + (#{$m-gutter}*#{$col})*9 / (#{$col} - 1) ); }
-      &:nth-child(10n+2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*8 + (#{$m-gutter}*#{$col})*8 / (#{$col} - 1) ); }
-      &:nth-child(10n+3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*7 + (#{$m-gutter}*#{$col})*7 / (#{$col} - 1) ); }
-      &:nth-child(10n+4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
-      &:nth-child(10n+5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
-      &:nth-child(10n+6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
-      &:nth-child(10n+7){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
-      &:nth-child(10n+8){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(10n+9){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
+    @for $i from 1 through 9 {
+      &:last-child{
+        &:nth-child(10n-10){ margin-right: 0; }
+        &:nth-child(10n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   } @else if $col == 11 {
-    &:last-child{
-      &:nth-child(11n+2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*9 + (#{$m-gutter}*#{$col})*9 / (#{$col} - 1) ); }
-      &:nth-child(11n+3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*8 + (#{$m-gutter}*#{$col})*8 / (#{$col} - 1) ); }
-      &:nth-child(11n+4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*7 + (#{$m-gutter}*#{$col})*7 / (#{$col} - 1) ); }
-      &:nth-child(11n+5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
-      &:nth-child(11n+6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
-      &:nth-child(11n+7){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
-      &:nth-child(11n+8){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
-      &:nth-child(11n+9){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(11n+10){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
+    @for $i from 1 through 10 {
+      &:last-child{
+        &:nth-child(11n-11){ margin-right: 0; }
+        &:nth-child(11n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   } @else if $col == 12 {
-    &:last-child{
-      &:nth-child(12n+2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*10 + (#{$m-gutter}*#{$col})*10 / (#{$col} - 1) ); }
-      &:nth-child(12n+3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*9 + (#{$m-gutter}*#{$col})*9 / (#{$col} - 1) ); }
-      &:nth-child(12n+4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*8 + (#{$m-gutter}*#{$col})*8 / (#{$col} - 1) ); }
-      &:nth-child(12n+5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*7 + (#{$m-gutter}*#{$col})*7 / (#{$col} - 1) ); }
-      &:nth-child(12n+6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
-      &:nth-child(12n+7){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
-      &:nth-child(12n+8){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
-      &:nth-child(12n+9){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
-      &:nth-child(12n+10){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
-      &:nth-child(12n+11){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
+    @for $i from 1 through 11 {
+      &:last-child{
+        &:nth-child(12n-12){ margin-right: 0; }
+        &:nth-child(12n-#{$i}){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*#{$i} + (#{$m-gutter}*#{$col})*#{$i} / (#{$col} - 1) ); }
+      }
     }
   }
 }
