--- a/sass/sass/mixins/_guttrt-margin.scss
+++ b/sass/sass/mixins/_guttrt-margin.scss
@@ -7,7 +7,7 @@
     min-height: 1px;
     margin-left: ($gutter / 2);
     margin-right: ($gutter / 2);
-    @include box-sizing(border-box);
+    box-sizing: border-box;
 }
 
 // 左邊不要 margin gutter
@@ -16,7 +16,7 @@
     min-height: 1px;
     margin-left: 0;
     margin-right: ($gutter / 2);
-    @include box-sizing(border-box);
+    box-sizing: border-box;
 }
 // 右邊不要 margin gutter
 @mixin gutter-no-right($gutter: $grid-gutter-width-margin) {
@@ -24,5 +24,5 @@
     min-height: 1px;
     margin-left: ($gutter / 2);
     margin-right: 0;
-    @include box-sizing(border-box);
+    box-sizing: border-box;
 }
