--- a/sass/sass/_footer.scss
+++ b/sass/sass/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    @include box-sizing(border-box);
+    box-sizing: border-box;
     @include clearfix;
     text-align: left;
     font-size: 0.813em;
@@ -56,7 +56,7 @@ footer {
             color: #FFF;
             border-radius:4px;
             text-align: center;
-            @include transition(all, .3s, ease-out);
+            transition: all .3s ease-out;
             &:hover,
             &:focus {
                 background: darken($primaryColor, 10);
