--- a/sass/sass/_image.scss
+++ b/sass/sass/_image.scss
@@ -54,7 +54,7 @@ img {
             z-index: 2;
             text-align: center;
             @include text-overflow;
-            @include box-sizing;
+            box-sizing: border-box;
             @include screen('mobile') {
                 width: 100%;
                 height: 2em;
