--- a/sass/sass/_megamenu.scss
+++ b/sass/sass/_megamenu.scss
@@ -1,5 +1,5 @@
 .megamenu {
-    @include box-sizing;
+    box-sizing: border-box;
     position: relative;
     z-index: 99;
     // 預設選單 ul
@@ -88,7 +88,7 @@
                         padding: .6em 1.2em;
                         color: #FFF;
                         font-weight: bold;
-                        @include box-sizing;
+                        box-sizing: border-box;
                         &:hover, &:focus {
                             background: $aHover;
                         }
@@ -137,7 +137,7 @@
     overflow-y: auto !important;
     -webkit-overflow-scrolling: touch;
     -webkit-transform: translate3d(0, 0, 0);
-    @include box-sizing;
+    box-sizing: border-box;
     .megamenu  {
         display: block;
     }
@@ -169,7 +169,7 @@
             background: $primaryColor;
             padding: 0 1em;
             line-height: 3em;
-            @include box-sizing;
+            box-sizing: border-box;
         }
         width:280px;
         padding: 3em 0;
@@ -183,7 +183,7 @@
         z-index: 9999;
         -webkit-overflow-scrolling: touch;
         -webkit-transform: translate3d(0, 0, 0);
-        @include box-sizing;
+        box-sizing: border-box;
         .megamenu {
             width: 100%;
             @include box-shadow(0px 0px 4px RGBA(0, 0, 0, .4));
@@ -295,7 +295,7 @@
                 width: 50%;
                 margin: 0;
                 padding: 0;
-                @include box-sizing;
+                box-sizing: border-box;
                 &:nth-child(odd):last-child {
                     width: 100%;
                 }
@@ -309,7 +309,7 @@
                     font-weight: bold;
                     text-decoration: none;
                     border: 1px solid rgba(255, 255, 255, .5);
-                    @include box-sizing;
+                    box-sizing: border-box;
                     &:nth-child(odd) {
                         border-left: none;
                         border-top: none;
