--- a/sass/sass/_modal.scss
+++ b/sass/sass/_modal.scss
@@ -9,7 +9,7 @@
     left: 50%;
     margin-left: -200px;
     padding: 1em 1em 1em;
-    @include box-sizing;
+    box-sizing: border-box;
     border-radius:8px;
     box-shadow:1px 1px 15px RGBA(0, 0, 0, .5);
     animation: scaleUp .5s ease-out;
