--- a/sass/sass/_notice.scss
+++ b/sass/sass/_notice.scss
@@ -9,7 +9,7 @@
     color: #666;
     background-color: #f2f2f2;
     position: relative;
-    @include box-sizing;
+    box-sizing: border-box;
     border-radius: 4px;
     border: none;
     &:before {
