--- a/sass/page/_sitemap.scss
+++ b/sass/page/_sitemap.scss
@@ -18,7 +18,7 @@
      .accesskeyDefine {
          padding: 1em 2em;
          background: #EEE;
-         @include border-radius(6px);
+         border-radius: 6px;
          li {
              margin-bottom: .2em;
          }
