--- a/sass/sass/_fatfooter.scss
+++ b/sass/sass/_fatfooter.scss
@@ -24,7 +24,7 @@
         right: 1%;
         z-index: 90;
         text-indent: -9999px;
-        @include border-radius(4px);
+        border-radius: 4px;
         &:before {
             content: "";
             position: absolute;
