--- a/sass/sass/_tooltip.scss
+++ b/sass/sass/_tooltip.scss
@@ -32,7 +32,7 @@ $tooltop-font-size:$font-size;
     background: #333;
     color: #fff;
     z-index: 1000;
-    @include box-sizing();
+    box-sizing: border-box;
 }
 [tooltip]:hover:before,
 [tooltip]:hover:after {
